--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+backend/.metadata/
+backend/booking/.gitignore
+backend/booking/mvnw
+backend/booking/mvnw.cmd
+backend/booking/.mvn/
+backend/booking/src/test/
